--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3079,10 +3079,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 136,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3199,7 +3197,7 @@
        "[6516 rows x 3 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3215,7 +3213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3227,17 +3232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "# if we have four digits, just keep the first two\n",
-    "df['age'] = df['age'].str.replace(r'-\\d+', '', regex=True)"
+    "df['age'] = df['age'].str.replace(r'(\\d\\d)\\d\\d', r'\\1', regex=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3247,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3256,36 +3261,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2595    9394\n",
-       "1807    9293\n",
-       "2408    9192\n",
-       "149     8889\n",
-       "4642    8485\n",
-       "5698    8182\n",
-       "2594    8081\n",
-       "2198    7980\n",
        "4337    7778\n",
-       "5697    7778\n",
-       "2014    7677\n",
-       "2661    7374\n",
-       "4720    6970\n",
-       "1043    6869\n",
-       "1491    6768\n",
-       "4327    6667\n",
-       "1628    6364\n",
+       "2080    6869\n",
        "4176    6162\n",
-       "1718    5759\n",
+       "5369    5960\n",
        "5502    5657\n",
+       "3664    5152\n",
+       "4516    3839\n",
+       "3844     180\n",
+       "2613     116\n",
+       "3594     113\n",
+       "3616     113\n",
+       "6445     113\n",
+       "404      112\n",
+       "2455     110\n",
+       "3863     109\n",
+       "5767     109\n",
+       "6468     108\n",
+       "6527     108\n",
+       "1011     107\n",
+       "3769     107\n",
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
