--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3301,6 +3301,321 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: NYC parking violations\n",
+    "\n",
+    "1. Load the NYC parking violations into a data frame from the CSV file.\n",
+    "2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = '../Data/small-nyc-parking-violations-2020.csv'\n",
+    "\n",
+    "df = pd.read_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Summons Number</th>\n",
+       "      <th>Plate ID</th>\n",
+       "      <th>Registration State</th>\n",
+       "      <th>Plate Type</th>\n",
+       "      <th>Issue Date</th>\n",
+       "      <th>Violation Code</th>\n",
+       "      <th>Vehicle Body Type</th>\n",
+       "      <th>Vehicle Make</th>\n",
+       "      <th>Issuing Agency</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Vehicle Color</th>\n",
+       "      <th>Unregistered Vehicle?</th>\n",
+       "      <th>Vehicle Year</th>\n",
+       "      <th>Meter Number</th>\n",
+       "      <th>Feet From Curb</th>\n",
+       "      <th>Violation Post Code</th>\n",
+       "      <th>Violation Description</th>\n",
+       "      <th>No Standing or Stopping Violation</th>\n",
+       "      <th>Hydrant Violation</th>\n",
+       "      <th>Double Parking Violation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12414406</td>\n",
+       "      <td>8796710548</td>\n",
+       "      <td>DHJ5639</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>PAS</td>\n",
+       "      <td>06/22/2020 12:00:00 AM</td>\n",
+       "      <td>14</td>\n",
+       "      <td>SUBN</td>\n",
+       "      <td>TOYOT</td>\n",
+       "      <td>T</td>\n",
+       "      <td>...</td>\n",
+       "      <td>GY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11369074</td>\n",
+       "      <td>4687751908</td>\n",
+       "      <td>HWF2996</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>PAS</td>\n",
+       "      <td>04/27/2020 12:00:00 AM</td>\n",
+       "      <td>36</td>\n",
+       "      <td>4DSD</td>\n",
+       "      <td>HONDA</td>\n",
+       "      <td>V</td>\n",
+       "      <td>...</td>\n",
+       "      <td>GY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PHTO SCHOOL ZN SPEED VIOLATION</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7998951</td>\n",
+       "      <td>8776009877</td>\n",
+       "      <td>JLH2449</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>PAS</td>\n",
+       "      <td>01/16/2020 12:00:00 AM</td>\n",
+       "      <td>21</td>\n",
+       "      <td>SUBN</td>\n",
+       "      <td>AUDI</td>\n",
+       "      <td>T</td>\n",
+       "      <td>...</td>\n",
+       "      <td>GY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5665423</td>\n",
+       "      <td>8767323352</td>\n",
+       "      <td>17954MK</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>COM</td>\n",
+       "      <td>11/12/2019 12:00:00 AM</td>\n",
+       "      <td>37</td>\n",
+       "      <td>VAN</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>T</td>\n",
+       "      <td>...</td>\n",
+       "      <td>WH</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4623723</td>\n",
+       "      <td>8764083597</td>\n",
+       "      <td>141AVT</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>10/17/2019 12:00:00 AM</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4DSD</td>\n",
+       "      <td>CADIL</td>\n",
+       "      <td>T</td>\n",
+       "      <td>...</td>\n",
+       "      <td>WH</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Summons Number Plate ID Registration State Plate Type  \\\n",
+       "0    12414406      8796710548  DHJ5639                 NY        PAS   \n",
+       "1    11369074      4687751908  HWF2996                 NY        PAS   \n",
+       "2     7998951      8776009877  JLH2449                 NY        PAS   \n",
+       "3     5665423      8767323352  17954MK                 NY        COM   \n",
+       "4     4623723      8764083597   141AVT                 NY        ORG   \n",
+       "\n",
+       "               Issue Date  Violation Code Vehicle Body Type Vehicle Make  \\\n",
+       "0  06/22/2020 12:00:00 AM              14              SUBN        TOYOT   \n",
+       "1  04/27/2020 12:00:00 AM              36              4DSD        HONDA   \n",
+       "2  01/16/2020 12:00:00 AM              21              SUBN         AUDI   \n",
+       "3  11/12/2019 12:00:00 AM              37               VAN         FORD   \n",
+       "4  10/17/2019 12:00:00 AM              40              4DSD        CADIL   \n",
+       "\n",
+       "  Issuing Agency  ...  Vehicle Color  Unregistered Vehicle?  Vehicle Year  \\\n",
+       "0              T  ...             GY                    NaN          2012   \n",
+       "1              V  ...             GY                    NaN          2015   \n",
+       "2              T  ...             GY                    NaN          2019   \n",
+       "3              T  ...             WH                    NaN          2017   \n",
+       "4              T  ...             WH                    NaN          2011   \n",
+       "\n",
+       "   Meter Number  Feet From Curb  Violation Post Code  \\\n",
+       "0           NaN               0                   35   \n",
+       "1           NaN               0                  NaN   \n",
+       "2           NaN               0                    E   \n",
+       "3           NaN               0                   38   \n",
+       "4           NaN               0                    E   \n",
+       "\n",
+       "            Violation Description  No Standing or Stopping Violation  \\\n",
+       "0                             NaN                                NaN   \n",
+       "1  PHTO SCHOOL ZN SPEED VIOLATION                                NaN   \n",
+       "2                             NaN                                NaN   \n",
+       "3                             NaN                                NaN   \n",
+       "4                             NaN                                NaN   \n",
+       "\n",
+       "  Hydrant Violation Double Parking Violation  \n",
+       "0               NaN                      NaN  \n",
+       "1               NaN                      NaN  \n",
+       "2               NaN                      NaN  \n",
+       "3               NaN                      NaN  \n",
+       "4               NaN                      NaN  \n",
+       "\n",
+       "[5 rows x 44 columns]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                                         12414406\n",
+       "Summons Number                                   8796710548\n",
+       "Plate ID                                            DHJ5639\n",
+       "Registration State                                       NY\n",
+       "Plate Type                                              PAS\n",
+       "Issue Date                           06/22/2020 12:00:00 AM\n",
+       "Violation Code                                           14\n",
+       "Vehicle Body Type                                      SUBN\n",
+       "Vehicle Make                                          TOYOT\n",
+       "Issuing Agency                                            T\n",
+       "Street Code1                                          67030\n",
+       "Street Code2                                          26430\n",
+       "Street Code3                                          13880\n",
+       "Vehicle Expiration Date                            20210709\n",
+       "Violation Location                                     67.0\n",
+       "Violation Precinct                                       67\n",
+       "Issuer Precinct                                          67\n",
+       "Issuer Code                                          362596\n",
+       "Issuer Command                                         T302\n",
+       "Issuer Squad                                              Q\n",
+       "Violation Time                                        0812A\n",
+       "Time First Observed                                     NaN\n",
+       "Violation County                                          K\n",
+       "Violation In Front Of Or Opposite                         F\n",
+       "House Number                                           1797\n",
+       "Street Name                                    Nostrand Ave\n",
+       "Intersecting Street                                     NaN\n",
+       "Date First Observed                                       0\n",
+       "Law Section                                             408\n",
+       "Sub Division                                              C\n",
+       "Violation Legal Code                                    NaN\n",
+       "Days Parking In Effect                                YYYYY\n",
+       "From Hours In Effect                                  0700A\n",
+       "To Hours In Effect                                    1000A\n",
+       "Vehicle Color                                            GY\n",
+       "Unregistered Vehicle?                                   NaN\n",
+       "Vehicle Year                                           2012\n",
+       "Meter Number                                            NaN\n",
+       "Feet From Curb                                            0\n",
+       "Violation Post Code                                      35\n",
+       "Violation Description                                   NaN\n",
+       "No Standing or Stopping Violation                       NaN\n",
+       "Hydrant Violation                                       NaN\n",
+       "Double Parking Violation                                NaN\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
