--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3307,7 +3307,10 @@
     "# Exercise: NYC parking violations\n",
     "\n",
     "1. Load the NYC parking violations into a data frame from the CSV file.\n",
-    "2. "
+    "2. Turn the `Issue Date` column into a datetime with `pd.to_datetime`. How many of the violations in this file really came from before or after the year 2020?\n",
+    "3. What were the most common vehicle years that had problems? How many of those years seem odd?\n",
+    "4. Do you see any columns that could (in theory) be integers or floats, but are prevented from being that way due to bad data?\n",
+    "5. Which columns, if any, have `NaN` values? What could/shoul"
    ]
   },
   {
