--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3315,18 +3315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rr/0mnyyv811fs5vyp22gf4fxk00000gn/T/ipykernel_31678/2147897542.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df = pd.read_csv(filename, parse_dates=['Issue Date'])\n"
+     ]
+    }
+   ],
    "source": [
     "filename = '../Data/small-nyc-parking-violations-2020.csv'\n",
     "\n",
-    "df = pd.read_csv(filename)"
+    "df = pd.read_csv(filename, parse_dates=['Issue Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -3381,7 +3390,7 @@
        "      <td>DHJ5639</td>\n",
        "      <td>NY</td>\n",
        "      <td>PAS</td>\n",
-       "      <td>06/22/2020 12:00:00 AM</td>\n",
+       "      <td>2020-06-22</td>\n",
        "      <td>14</td>\n",
        "      <td>SUBN</td>\n",
        "      <td>TOYOT</td>\n",
@@ -3405,7 +3414,7 @@
        "      <td>HWF2996</td>\n",
        "      <td>NY</td>\n",
        "      <td>PAS</td>\n",
-       "      <td>04/27/2020 12:00:00 AM</td>\n",
+       "      <td>2020-04-27</td>\n",
        "      <td>36</td>\n",
        "      <td>4DSD</td>\n",
        "      <td>HONDA</td>\n",
@@ -3429,7 +3438,7 @@
        "      <td>JLH2449</td>\n",
        "      <td>NY</td>\n",
        "      <td>PAS</td>\n",
-       "      <td>01/16/2020 12:00:00 AM</td>\n",
+       "      <td>2020-01-16</td>\n",
        "      <td>21</td>\n",
        "      <td>SUBN</td>\n",
        "      <td>AUDI</td>\n",
@@ -3453,7 +3462,7 @@
        "      <td>17954MK</td>\n",
        "      <td>NY</td>\n",
        "      <td>COM</td>\n",
-       "      <td>11/12/2019 12:00:00 AM</td>\n",
+       "      <td>2019-11-12</td>\n",
        "      <td>37</td>\n",
        "      <td>VAN</td>\n",
        "      <td>FORD</td>\n",
@@ -3477,7 +3486,7 @@
        "      <td>141AVT</td>\n",
        "      <td>NY</td>\n",
        "      <td>ORG</td>\n",
-       "      <td>10/17/2019 12:00:00 AM</td>\n",
+       "      <td>2019-10-17</td>\n",
        "      <td>40</td>\n",
        "      <td>4DSD</td>\n",
        "      <td>CADIL</td>\n",
@@ -3507,45 +3516,45 @@
        "3     5665423      8767323352  17954MK                 NY        COM   \n",
        "4     4623723      8764083597   141AVT                 NY        ORG   \n",
        "\n",
-       "               Issue Date  Violation Code Vehicle Body Type Vehicle Make  \\\n",
-       "0  06/22/2020 12:00:00 AM              14              SUBN        TOYOT   \n",
-       "1  04/27/2020 12:00:00 AM              36              4DSD        HONDA   \n",
-       "2  01/16/2020 12:00:00 AM              21              SUBN         AUDI   \n",
-       "3  11/12/2019 12:00:00 AM              37               VAN         FORD   \n",
-       "4  10/17/2019 12:00:00 AM              40              4DSD        CADIL   \n",
+       "  Issue Date  Violation Code Vehicle Body Type Vehicle Make Issuing Agency  \\\n",
+       "0 2020-06-22              14              SUBN        TOYOT              T   \n",
+       "1 2020-04-27              36              4DSD        HONDA              V   \n",
+       "2 2020-01-16              21              SUBN         AUDI              T   \n",
+       "3 2019-11-12              37               VAN         FORD              T   \n",
+       "4 2019-10-17              40              4DSD        CADIL              T   \n",
        "\n",
-       "  Issuing Agency  ...  Vehicle Color  Unregistered Vehicle?  Vehicle Year  \\\n",
-       "0              T  ...             GY                    NaN          2012   \n",
-       "1              V  ...             GY                    NaN          2015   \n",
-       "2              T  ...             GY                    NaN          2019   \n",
-       "3              T  ...             WH                    NaN          2017   \n",
-       "4              T  ...             WH                    NaN          2011   \n",
+       "   ...  Vehicle Color  Unregistered Vehicle?  Vehicle Year  Meter Number  \\\n",
+       "0  ...             GY                    NaN          2012           NaN   \n",
+       "1  ...             GY                    NaN          2015           NaN   \n",
+       "2  ...             GY                    NaN          2019           NaN   \n",
+       "3  ...             WH                    NaN          2017           NaN   \n",
+       "4  ...             WH                    NaN          2011           NaN   \n",
        "\n",
-       "   Meter Number  Feet From Curb  Violation Post Code  \\\n",
-       "0           NaN               0                   35   \n",
-       "1           NaN               0                  NaN   \n",
-       "2           NaN               0                    E   \n",
-       "3           NaN               0                   38   \n",
-       "4           NaN               0                    E   \n",
+       "   Feet From Curb  Violation Post Code           Violation Description  \\\n",
+       "0               0                   35                             NaN   \n",
+       "1               0                  NaN  PHTO SCHOOL ZN SPEED VIOLATION   \n",
+       "2               0                    E                             NaN   \n",
+       "3               0                   38                             NaN   \n",
+       "4               0                    E                             NaN   \n",
        "\n",
-       "            Violation Description  No Standing or Stopping Violation  \\\n",
-       "0                             NaN                                NaN   \n",
-       "1  PHTO SCHOOL ZN SPEED VIOLATION                                NaN   \n",
-       "2                             NaN                                NaN   \n",
-       "3                             NaN                                NaN   \n",
-       "4                             NaN                                NaN   \n",
+       "   No Standing or Stopping Violation Hydrant Violation  \\\n",
+       "0                                NaN               NaN   \n",
+       "1                                NaN               NaN   \n",
+       "2                                NaN               NaN   \n",
+       "3                                NaN               NaN   \n",
+       "4                                NaN               NaN   \n",
        "\n",
-       "  Hydrant Violation Double Parking Violation  \n",
-       "0               NaN                      NaN  \n",
-       "1               NaN                      NaN  \n",
-       "2               NaN                      NaN  \n",
-       "3               NaN                      NaN  \n",
-       "4               NaN                      NaN  \n",
+       "  Double Parking Violation  \n",
+       "0                      NaN  \n",
+       "1                      NaN  \n",
+       "2                      NaN  \n",
+       "3                      NaN  \n",
+       "4                      NaN  \n",
        "\n",
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3556,66 +3565,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Unnamed: 0                                         12414406\n",
-       "Summons Number                                   8796710548\n",
-       "Plate ID                                            DHJ5639\n",
-       "Registration State                                       NY\n",
-       "Plate Type                                              PAS\n",
-       "Issue Date                           06/22/2020 12:00:00 AM\n",
-       "Violation Code                                           14\n",
-       "Vehicle Body Type                                      SUBN\n",
-       "Vehicle Make                                          TOYOT\n",
-       "Issuing Agency                                            T\n",
-       "Street Code1                                          67030\n",
-       "Street Code2                                          26430\n",
-       "Street Code3                                          13880\n",
-       "Vehicle Expiration Date                            20210709\n",
-       "Violation Location                                     67.0\n",
-       "Violation Precinct                                       67\n",
-       "Issuer Precinct                                          67\n",
-       "Issuer Code                                          362596\n",
-       "Issuer Command                                         T302\n",
-       "Issuer Squad                                              Q\n",
-       "Violation Time                                        0812A\n",
-       "Time First Observed                                     NaN\n",
-       "Violation County                                          K\n",
-       "Violation In Front Of Or Opposite                         F\n",
-       "House Number                                           1797\n",
-       "Street Name                                    Nostrand Ave\n",
-       "Intersecting Street                                     NaN\n",
-       "Date First Observed                                       0\n",
-       "Law Section                                             408\n",
-       "Sub Division                                              C\n",
-       "Violation Legal Code                                    NaN\n",
-       "Days Parking In Effect                                YYYYY\n",
-       "From Hours In Effect                                  0700A\n",
-       "To Hours In Effect                                    1000A\n",
-       "Vehicle Color                                            GY\n",
-       "Unregistered Vehicle?                                   NaN\n",
-       "Vehicle Year                                           2012\n",
-       "Meter Number                                            NaN\n",
-       "Feet From Curb                                            0\n",
-       "Violation Post Code                                      35\n",
-       "Violation Description                                   NaN\n",
-       "No Standing or Stopping Violation                       NaN\n",
-       "Hydrant Violation                                       NaN\n",
-       "Double Parking Violation                                NaN\n",
-       "Name: 0, dtype: object"
+       "Issue Date\n",
+       "True     742366\n",
+       "False    507207\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[0]"
+    "(df['Issue Date'].dt.year != 2020).value_counts()"
    ]
   },
   {
