--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3565,25 +3565,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Issue Date\n",
-       "True     742366\n",
-       "False    507207\n",
-       "Name: count, dtype: int64"
+       "True     0.594096\n",
+       "False    0.405904\n",
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(df['Issue Date'].dt.year != 2020).value_counts()"
+    "(df['Issue Date'].dt.year != 2020).value_counts(normalize=True)"
    ]
   },
   {
@@ -3591,7 +3591,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df['Issue Date'] = pd.to_datetime(df['Issue Date'])"
+   ]
   }
  ],
  "metadata": {
