--- a/LernerPython - 2024-08Aug-cleaning.ipynb
+++ b/LernerPython - 2024-08Aug-cleaning.ipynb
@@ -3594,6 +3594,124 @@
    "source": [
     "# df['Issue Date'] = pd.to_datetime(df['Issue Date'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Issue Date\n",
+       "2019    742037\n",
+       "2020    507207\n",
+       "2017       231\n",
+       "2018        32\n",
+       "2021        21\n",
+       "2000        12\n",
+       "2026         5\n",
+       "2014         4\n",
+       "2010         4\n",
+       "2016         3\n",
+       "2022         3\n",
+       "2015         2\n",
+       "2011         2\n",
+       "2012         2\n",
+       "2028         1\n",
+       "2004         1\n",
+       "2024         1\n",
+       "2030         1\n",
+       "2045         1\n",
+       "2033         1\n",
+       "2009         1\n",
+       "2001         1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What were the most common vehicle years that had problems? How many of those years seem odd?\n",
+    "\n",
+    "df['Issue Date'].dt.year.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                                      12414406\n",
+       "Summons Number                                8796710548\n",
+       "Plate ID                                         DHJ5639\n",
+       "Registration State                                    NY\n",
+       "Plate Type                                           PAS\n",
+       "Issue Date                           2020-06-22 00:00:00\n",
+       "Violation Code                                        14\n",
+       "Vehicle Body Type                                   SUBN\n",
+       "Vehicle Make                                       TOYOT\n",
+       "Issuing Agency                                         T\n",
+       "Street Code1                                       67030\n",
+       "Street Code2                                       26430\n",
+       "Street Code3                                       13880\n",
+       "Vehicle Expiration Date                         20210709\n",
+       "Violation Location                                  67.0\n",
+       "Violation Precinct                                    67\n",
+       "Issuer Precinct                                       67\n",
+       "Issuer Code                                       362596\n",
+       "Issuer Command                                      T302\n",
+       "Issuer Squad                                           Q\n",
+       "Violation Time                                     0812A\n",
+       "Time First Observed                                  NaN\n",
+       "Violation County                                       K\n",
+       "Violation In Front Of Or Opposite                      F\n",
+       "House Number                                        1797\n",
+       "Street Name                                 Nostrand Ave\n",
+       "Intersecting Street                                  NaN\n",
+       "Date First Observed                                    0\n",
+       "Law Section                                          408\n",
+       "Sub Division                                           C\n",
+       "Violation Legal Code                                 NaN\n",
+       "Days Parking In Effect                             YYYYY\n",
+       "From Hours In Effect                               0700A\n",
+       "To Hours In Effect                                 1000A\n",
+       "Vehicle Color                                         GY\n",
+       "Unregistered Vehicle?                                NaN\n",
+       "Vehicle Year                                        2012\n",
+       "Meter Number                                         NaN\n",
+       "Feet From Curb                                         0\n",
+       "Violation Post Code                                   35\n",
+       "Violation Description                                NaN\n",
+       "No Standing or Stopping Violation                    NaN\n",
+       "Hydrant Violation                                    NaN\n",
+       "Double Parking Violation                             NaN\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Do you see any columns that could (in theory) be integers or floats, but are prevented from being that way due to bad data?\n",
+    "\n",
+    "df.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
